#+TITLE: Changelog

* Unreleased

* 2023-07-26
** Added
   - ~:project/create~ version 2023-07-14 of practicalli/project-templates
   - ~:project/create~ version 2023-07-26 of practicalli/project-templates

* 2023-07-01
** Added
*** alias: `:test/run-all` kaocha runner with `:fail-fast false` to run all tests regardless of failing tests
*** ci: megalinter GitHub action version java@7 in megalinter.yaml workflow
*** ci: scheduled monthly version check

** Updated
*** Update library versions using `make outdated`

    | :name                                |  :current |   :latest |
    |--------------------------------------+-----------+-----------|
    | com.github.jpmonettas/flow-storm-dbg |     3.6.2 |     3.6.5 |
    | com.github.liquidz/antq              |  2.4.1070 |  2.5.1089 |
    | djblue/portal                        |    0.41.0 |    0.42.0 |
    | io.github.nextjournal/clerk          |  0.13.842 |  0.14.919 |
    | lambdaisland/kaocha                  | 1.84.1335 | 1.85.1342 |
    | zprint/zprint                        |     1.2.6 |     1.2.7 |

*** Monthly version update using `make outdated`

    | :name                                | :current |  :latest |
    |--------------------------------------+----------+----------|
    | cider/cider-nrepl                    |   0.30.0 |   0.31.0 |
    | com.github.jpmonettas/flow-storm-dbg |    3.6.5 |    3.6.7 |
    | com.github.liquidz/antq              | 2.5.1089 | 2.5.1095 |
    | com.github.seancorfield/next.jdbc    |  1.3.874 |  1.3.883 |
    | djblue/portal                        |   0.42.0 |   0.42.1 |
    | integrant/repl                       |    0.3.2 |    0.3.3 |
    | io.aviso/pretty                      |    1.4.3 |    1.4.4 |

* 2023-06-11
** Updated
*** practicalli/project-templates version 2023-06-11

* 2023-06-02
** Updated
*** ci: setup-clojure action version 11
*** ci: megalinter@java action version 7
*** ci: clj-kondo action version 2023.05.26