@@ -20,7 +20,8 @@ on:
     # - cron: "0 4 * * *" # at 04:04:04 ever day
     # - cron: "0 4 * * 5" # at 04:04:04 ever Friday
     - cron: "0 4 1 * *" # at 04:04:04 on first day of month
-  workflow_dispatch: # Run manually via GitHub Actions Workflow page
+  workflow_dispatch:
+    # Run manually via GitHub Actions Workflow page
 
 jobs:
   scheduled-version-check:
@@ -38,7 +39,7 @@ jobs:
       - name: "Antq Check versions"
         uses: liquidz/antq-action@main
         with:
-          excludes: "io.github.babashka/neil org.clojure/tools.deps.alpha"
+          excludes: "io.github.babashka/neil org.clojure/tools.deps.alpha io.github.babashka/neil org.clojure/clojurescript"
 
       # Summary
       - run: echo "🎨 library versions checked with liquidz/antq"
